--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "illuminate/workbench",
+    "name": "austinkregel/workbench",
     "description": "The Illuminate Workbench package.",
     "license": "MIT",
     "authors": [
