--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
         "php": ">=5.4.0",
         "illuminate/filesystem": "~5.1",
         "illuminate/support": "~5.1",
-        "symfony/finder": "2.7.*"
+        "symfony/finder": "2.7.*|2.8.*"
     },
     "require-dev": {
         "illuminate/console": "~5.1"
